--- a/Code/4 - Clasificación básica Predicción de Calidad del Vino (Core) copy.ipynb
+++ b/Code/4 - Clasificación básica Predicción de Calidad del Vino (Core) copy.ipynb
@@ -1343,6 +1343,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Este análisis sugiere que, si bien el modelo KNN es parcialmente eficaz para predecir ciertos niveles de calidad del vino, su desempeño probablemente podría mejorarse, posiblemente ajustando los hiperparámetros, utilizando un algoritmo de clasificación diferente o empleando técnicas para manejar el desequilibrio de clases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### **Random Forest**"
    ]
   },
