--- a/Readme.me
+++ b/Readme.me
@@ -3,10 +3,12 @@ author: Guillermo Cabrera
 date: 'Nov 2024'
 Title: Clasificación básica / Predicción de Calidad del Vino (Core)
 Course: Fundamentos de Machine Learning
-format: '.ipynb', '.py', 'csv'
+format: '.ipynb', '.py', 'csv', 'pdf'
 ---
 
 Ejecutar el archivo .ipynb de la carpeta Code para visualizar los resultados.
+
+Las conclusiones finales se encuentran en la carpeta PDF.
 
 
 Propósito del Proyecto
